Tiny tweaks to teh code